Make sure app title doesnt jump on slow loading connections

--- a/static/sass/elements/chromedash-featurelist.scss
+++ b/static/sass/elements/chromedash-featurelist.scss
@@ -22,7 +22,7 @@
   .milestone-marker {
     font-size: 14px;
     font-weight: 500;
-    margin: 0;
+    margin: 8px;
   }
   [data-first-of-milestone] {
     $milestone-label-size: 12px;
