--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -291,6 +291,10 @@ footer {
     .main-toolbar {
       padding: 0;
       display: block;
+
+      iron-icon {
+        width: 24px;
+      }
     }
   }
 
